Fix bottom menu overlap

--- a/themes/xyblag/sass/_base.scss
+++ b/themes/xyblag/sass/_base.scss
@@ -13,7 +13,6 @@ body {
 .container {
   width: $body-width;
   margin: 0 auto;
-  padding-bottom: 2rem;
 }
 
 @include max-screen() {
