--- a/themes/xyblag/sass/_main.scss
+++ b/themes/xyblag/sass/_main.scss
@@ -438,7 +438,7 @@ footer {
   a:hover {
     color: var(--primary-color);
   }
-  padding: 1rem;
+  padding: 1rem 0 2rem;
 
   @include sm {
     flex-direction: column;
